# barnes-hut-nbody-haskell

./: .gitignore  CHANGELOG.md  LICENSE  barnes-hut-n-body-simulation.cabal  flake.nix  readme.md
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Quadtree.hs  Render.hs  Simulation.hs  Types.hs
