cabal-version:   3.0
name:            barnes-hut-n-body-simulation
version:         0.1.0.0
license:         BSD-3-Clause
license-file:    LICENSE
author:          John Barnes VI
maintainer:      lj502jr@gmail.com
category:        Math
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable barnes-hut-n-body-simulation
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.18.2.1, gloss, linear, random, containers, vector
    hs-source-dirs:   app
    default-language: GHC2021
